fixed the issue of search box overlapping with topbar and added purpose of the project in readme

--- a/client/src/components/topbar/topbar.css
+++ b/client/src/components/topbar/topbar.css
@@ -1,5 +1,4 @@
 .topbar {
-    position: fixed;
     width: 100%;
     padding: 5px 20px;
     box-shadow: rgb(0 0 0 / 15%) 2px 2px 8px, rgb(0 0 0 / 15%) -2px -2px 8px;
@@ -7,7 +6,7 @@
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    z-index: 10001;
+    z-index: 101;
 }
 
 .topbar_links {
